--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "ios": "react-native run-ios",
     "start": "react-native start",
     "test": "jest",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "apk": "cd android && ./gradlew assembleRelease"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2",
@@ -18,6 +19,7 @@
     "lodash": "^4.17",
     "react": "^17.0",
     "react-native": "^0.65",
+    "react-native-dialog": "^9.1.0",
     "react-native-sound-player": "^0.11",
     "react-native-svg": "^12.1"
   },
