--- a/package.json
+++ b/package.json
@@ -1,14 +1,11 @@
 {
-  "name": "subadapmuzikkutusu",
-  "version": "0.0.1",
-  "private": true,
+  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "android": "react-native run-android",
-    "ios": "react-native run-ios",
-    "start": "react-native start",
-    "test": "jest",
-    "lint": "eslint .",
-    "apk": "cd android && ./gradlew assembleRelease"
+    "start": "expo start",
+    "android": "expo start --android",
+    "ios": "expo start --ios",
+    "web": "expo start --web",
+    "eject": "expo eject"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2",
@@ -16,25 +13,19 @@
     "@fortawesome/free-regular-svg-icons": "^5.15",
     "@fortawesome/free-solid-svg-icons": "^5.15",
     "@fortawesome/react-native-fontawesome": "^0.2",
-    "lodash": "^4.17",
-    "react": "^17.0",
-    "react-native": "^0.65",
+    "expo": "~42.0.1",
+    "expo-av": "^9.2.3",
+    "expo-status-bar": "~1.0.4",
+    "react": "16.13.1",
+    "react-dom": "16.13.1",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
     "react-native-dialog": "^9.1.0",
     "react-native-sound-player": "^0.11",
-    "react-native-svg": "^12.1"
+    "react-native-svg": "^12.1",
+    "react-native-web": "~0.13.12"
   },
   "devDependencies": {
-    "@babel/core": "^7.12",
-    "@babel/runtime": "^7.12",
-    "@react-native-community/eslint-config": "^2.0",
-    "babel-jest": "^26.6",
-    "eslint": "^7.14",
-    "jest": "^26.6",
-    "metro-react-native-babel-preset": "^0.66",
-    "react-native-codegen": "^0.0",
-    "react-test-renderer": "^17.0"
+    "@babel/core": "^7.9.0"
   },
-  "jest": {
-    "preset": "react-native"
-  }
+  "private": true
 }
