--- a/app.json
+++ b/app.json
@@ -3,6 +3,9 @@
     "name": "Şubadap Müzik Çalar",
     "slug": "subadap-player",
     "version": "1.0.0",
+    "description": "",
+    "githubUrl": "https://github.com/kinefi/subadap-player",
+    "owner": "kinefi",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "splash": {
@@ -13,9 +16,7 @@
     "updates": {
       "fallbackToCacheTimeout": 0
     },
-    "assetBundlePatterns": [
-      "**/*"
-    ],
+    "assetBundlePatterns": ["**/*"],
     "ios": {
       "supportsTablet": true
     },
@@ -28,8 +29,6 @@
     },
     "web": {
       "favicon": "./assets/favicon.png"
-    },
-    "description": "",
-    "githubUrl": "https://github.com/kinefi/subadap-player"
+    }
   }
 }
