--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-native-dialog": "^9.1.0",
     "react-native-sound-player": "^0.11",
     "react-native-svg": "^12.1",
-    "react-native-web": "~0.13.12"
+    "react-native-web": "~0.13.12",
+    "react-native-webview": "11.6.2"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0"
