--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "expo": "~42.0.1",
     "expo-av": "^9.2.3",
     "expo-status-bar": "~1.0.4",
+    "expo-web-browser": "~9.2.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
