--- a/package.json
+++ b/package.json
@@ -15,21 +15,27 @@
     "@fortawesome/free-regular-svg-icons": "^5.15",
     "@fortawesome/free-solid-svg-icons": "^5.15",
     "@fortawesome/react-native-fontawesome": "^0.2",
-    "expo": "~42.0.1",
+    "@react-navigation/drawer": "^6.1",
+    "@react-navigation/native": "^6.0",
+    "expo": "~42.0.4",
     "expo-av": "^9.2.3",
     "expo-status-bar": "~1.0.4",
     "expo-web-browser": "~9.2.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
-    "react-native-dialog": "^9.1.0",
-    "react-native-sound-player": "^0.11",
-    "react-native-svg": "^12.1",
+    "react-native-dialog": "^9.1",
+    "react-native-gesture-handler": "~1.10.2",
+    "react-native-get-random-values": "~1.7.0",
+    "react-native-reanimated": "~2.2.0",
+    "react-native-safe-area-context": "3.2.0",
+    "react-native-svg": "12.1.1",
     "react-native-web": "~0.13.12",
     "react-native-webview": "11.6.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.9.0"
+    "@babel/core": "^7.9",
+    "expo-cli": "^4.12"
   },
   "private": true
 }
