--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-native-dialog": "^9.1",
     "react-native-gesture-handler": "~1.10.2",
     "react-native-get-random-values": "~1.7.0",
+    "react-native-progress": "^5.0",
     "react-native-reanimated": "~2.2.0",
     "react-native-safe-area-context": "3.2.0",
     "react-native-svg": "12.1.1",
