--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "@react-navigation/drawer": "^6.1",
     "@react-navigation/native": "^6.0",
     "expo": "~42.0.4",
-    "expo-av": "^9.2.3",
+    "expo-av": "~9.2.3",
     "expo-status-bar": "~1.0.4",
     "expo-web-browser": "~9.2.0",
     "react": "16.13.1",
@@ -41,6 +41,7 @@
     "react-native-dialog": "^9.1",
     "react-native-gesture-handler": "~1.10.2",
     "react-native-get-random-values": "~1.7.0",
+    "react-native-progress": "^5.0",
     "react-native-reanimated": "~2.2.0",
     "react-native-safe-area-context": "3.2.0",
     "react-native-svg": "12.1.1",
@@ -48,7 +49,7 @@
     "react-native-webview": "11.6.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.9",
+    "@babel/core": "~7.9.0",
     "expo-cli": "^4.12",
     "standard-version": "^9.3",
     "standard-version-expo": "^1.0"
