Add initial animation

--- a/package.json
+++ b/package.json
@@ -32,10 +32,12 @@
     "@react-navigation/drawer": "^6.1",
     "@react-navigation/native": "^6.0",
     "expo": "~42.0.4",
+    "expo-app-loading": "1.1.2",
     "expo-av": "~9.2.3",
     "expo-status-bar": "~1.0.4",
     "expo-web-browser": "~9.2.0",
     "react": "16.13.1",
+    "react-apng": "^1.4.0",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
     "react-native-dialog": "^9.1",
