Update expo to v43

--- a/package.json
+++ b/package.json
@@ -31,25 +31,25 @@
     "@fortawesome/react-native-fontawesome": "^0.2",
     "@react-navigation/drawer": "^6.1",
     "@react-navigation/native": "^6.0",
-    "expo": "~42.0.4",
-    "expo-av": "~9.2.3",
-    "expo-status-bar": "~1.0.4",
-    "expo-web-browser": "~9.2.0",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
-    "react-native-dialog": "^9.1",
+    "expo": "^43.0.0",
+    "expo-av": "~10.1.2",
+    "expo-status-bar": "~1.1.0",
+    "expo-web-browser": "~10.0.3",
+    "react": "17.0.1",
+    "react-dom": "17.0.1",
+    "react-native": "0.64.2",
+    "react-native-dialog": "^9.2",
     "react-native-gesture-handler": "~1.10.2",
     "react-native-get-random-values": "~1.7.0",
     "react-native-progress": "^5.0",
     "react-native-reanimated": "~2.2.0",
-    "react-native-safe-area-context": "3.2.0",
+    "react-native-safe-area-context": "3.3.2",
     "react-native-svg": "12.1.1",
-    "react-native-web": "~0.13.12",
-    "react-native-webview": "11.6.2"
+    "react-native-web": "0.17.1",
+    "react-native-webview": "11.13.0"
   },
   "devDependencies": {
-    "@babel/core": "~7.9.0",
+    "@babel/core": "^7.12.9",
     "expo-cli": "^4.12",
     "standard-version": "^9.3",
     "standard-version-expo": "^1.0"
