--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-dom": "17.0.1",
     "react-native": "0.64.2",
     "react-native-dialog": "^9.2",
+    "react-native-elements": "^3.4",
     "react-native-gesture-handler": "~1.10.2",
     "react-native-get-random-values": "~1.7.0",
     "react-native-progress": "^5.0",
