--- a/package.json
+++ b/package.json
@@ -31,14 +31,15 @@
     "@fortawesome/react-native-fontawesome": "^0.2",
     "@react-navigation/drawer": "^6.1",
     "@react-navigation/native": "^6.0",
-    "expo": "^43.0.0",
-    "expo-av": "~10.1.2",
+    "expo": "^43",
+    "expo-av": "~10.1.3",
     "expo-status-bar": "~1.1.0",
     "expo-web-browser": "~10.0.3",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.2",
     "react-native-dialog": "^9.2",
+    "react-native-elements": "^3.4",
     "react-native-gesture-handler": "~1.10.2",
     "react-native-get-random-values": "~1.7.0",
     "react-native-progress": "^5.0",
