--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-native-get-random-values": "~1.7.0",
     "react-native-progress": "^5.0",
     "react-native-reanimated": "~2.2.0",
+    "react-native-root-toast": "^3.3.0",
     "react-native-safe-area-context": "3.3.2",
     "react-native-svg": "12.1.1",
     "react-native-web": "0.17.1",
