--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@fortawesome/free-regular-svg-icons": "^5.15",
     "@fortawesome/free-solid-svg-icons": "^5.15",
     "@fortawesome/react-native-fontawesome": "^0.2",
+    "@react-native-community/slider": "^4.1",
     "@react-navigation/drawer": "^6.1",
     "@react-navigation/native": "^6.0",
     "expo": "^43",
@@ -42,7 +43,6 @@
     "react-native-elements": "^3.4",
     "react-native-gesture-handler": "~1.10.2",
     "react-native-get-random-values": "~1.7.0",
-    "react-native-progress": "^5.0",
     "react-native-reanimated": "~2.2.0",
     "react-native-root-toast": "^3.3.0",
     "react-native-safe-area-context": "3.3.2",
