--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "main": "node_modules/expo/AppEntry.js",
   "license": "Apache-2.0",
-  "version": "0.4.0",
+  "version": "0.5.0",
   "repository": {
     "type": "git",
     "url": "https://github.com/kinefi/subadap-player.git"
@@ -20,7 +20,7 @@
     "web": "expo start --web",
     "apk": "expo build:android -t apk",
     "arc": "expo build:ios -t archive",
-    "version": "standard-version",
+    "release": "standard-version --release-as ",
     "eject": "expo eject"
   },
   "dependencies": {
