--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,14 +4,34 @@ on:
     branches:
       - main
 jobs:
+
+# https://github.com/expo/expo-github-action#creating-a-new-eas-build
+  build:
+    name: Build
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-node@v2
+        with:
+          node-version: 'lts/*'
+      - uses: expo/expo-github-action@v6
+        with:
+          eas-version: latest
+          token: ${{ secrets.EXPO_TOKEN }}
+      - name: Install dependencies
+        run: yarn install
+      - name: Build packages
+        run: eas build
+
+# https://github.com/expo/expo-github-action#publish-on-any-push-to-main
   publish:
     name: Install and publish
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: actions/setup-node@v1
+      - uses: actions/setup-node@v2
         with:
-          node-version: 14.x
+          node-version: 'lts/*'
       - uses: expo/expo-github-action@v6
         with:
           expo-version: 4.x
