--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Expo Publish
+name: Expo
 on:
   push:
     branches:
@@ -16,16 +16,17 @@ jobs:
           node-version: 'lts/*'
       - uses: expo/expo-github-action@v6
         with:
+          expo-version: 4.x
           eas-version: latest
           token: ${{ secrets.EXPO_TOKEN }}
       - name: Install dependencies
         run: yarn install
       - name: Build packages
-        run: eas build
+        run: eas build --platform all --non-interactive
 
 # https://github.com/expo/expo-github-action#publish-on-any-push-to-main
   publish:
-    name: Install and publish
+    name: Publish
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -36,5 +37,7 @@ jobs:
         with:
           expo-version: 4.x
           token: ${{ secrets.EXPO_TOKEN }}
-      - run: yarn install
-      - run: expo publish
+      - name: Install dependencies
+        run: yarn install
+      - name: Publish the app
+        run: expo publish
