--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,28 +3,25 @@ on:
   push:
     branches:
       - main
+# https://github.com/expo/expo-github-action#publish-on-any-push-to-main
 jobs:
-
-# https://github.com/expo/expo-github-action#creating-a-new-eas-build
-  build:
-    name: Build
+  build-android:
+    name: Build Android
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
         with:
-          node-version: 'lts/*'
+          node-version: "lts/*"
       - uses: expo/expo-github-action@v6
         with:
           expo-version: 4.x
-          eas-version: latest
           token: ${{ secrets.EXPO_TOKEN }}
       - name: Install dependencies
         run: yarn install
       - name: Build packages
-        run: eas build --platform all --non-interactive
+        run: yarn build:android
 
-# https://github.com/expo/expo-github-action#publish-on-any-push-to-main
   publish:
     name: Publish
     runs-on: ubuntu-latest
@@ -32,7 +29,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
         with:
-          node-version: 'lts/*'
+          node-version: "lts/*"
       - uses: expo/expo-github-action@v6
         with:
           expo-version: 4.x
