--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,6 +17,7 @@ jobs:
         with:
           expo-version: 4.x
           token: ${{ secrets.EXPO_TOKEN }}
+          expo-cache: true
       - name: Install dependencies
         run: yarn install
       - name: Build packages
@@ -34,6 +35,7 @@ jobs:
         with:
           expo-version: 4.x
           token: ${{ secrets.EXPO_TOKEN }}
+          expo-cache: true
       - name: Install dependencies
         run: yarn install
       - name: Publish the app
