--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "expo-av": "~10.1.3",
     "expo-status-bar": "~1.1.0",
     "expo-web-browser": "~10.0.3",
+    "lodash": "^4.17",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
