--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@fortawesome/free-regular-svg-icons": "^5.15",
     "@fortawesome/free-solid-svg-icons": "^5.15",
     "@fortawesome/react-native-fontawesome": "^0.2",
+    "@react-native-async-storage/async-storage": "~1.15.0",
     "@react-native-community/slider": "4.1.7",
     "@react-navigation/drawer": "^6.1",
     "@react-navigation/native": "^6.0",
@@ -54,8 +55,8 @@
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
-    "expo-cli": "^4.13",
     "eas-cli": "^0.38",
+    "expo-cli": "^4.13",
     "standard-version": "^9.3",
     "standard-version-expo": "^1.0"
   }
