--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.15",
     "@fortawesome/react-native-fontawesome": "^0.2",
     "@react-native-async-storage/async-storage": "~1.15.0",
+    "@react-native-community/masked-view": "^0.1.11",
     "@react-native-community/slider": "4.1.12",
     "@react-navigation/drawer": "^6.1",
     "@react-navigation/native": "^6.0",
@@ -49,13 +50,14 @@
     "react-native-reanimated": "~2.3.1",
     "react-native-root-toast": "^3.3.0",
     "react-native-safe-area-context": "3.3.2",
+    "react-native-screens": "~3.10.1",
     "react-native-svg": "12.1.1",
     "react-native-web": "0.17.1",
     "react-native-webview": "11.15.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
-    "eas-cli": "^0.41",
+    "eas-cli": "^0.42",
     "expo-cli": "^5.0",
     "standard-version": "^9.3",
     "standard-version-expo": "^1.0"
