--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "build:android": "eas build --platform android --non-interactive",
     "build:ios": "eas build --platform ios --non-interactive",
     "build:all": "eas build --platform all --non-interactive",
-    "license:generate": "yarn npm-license-crawler -onlyDirectDependencies -json ./assets/licenses.json",
+    "license:check": "yarn license-checker --production --json --out ./assets/licenses.json",
     "release": "standard-version --release-as ",
     "eject": "expo eject"
   },
@@ -37,7 +37,7 @@
     "@react-native-community/slider": "4.1.12",
     "@react-navigation/drawer": "^6.1",
     "@react-navigation/native": "^6.0",
-    "expo": "^44",
+    "expo": "44",
     "expo-av": "~10.2.0",
     "expo-constants": "~13.0.0",
     "expo-status-bar": "~1.2.0",
@@ -62,7 +62,7 @@
     "@babel/core": "^7.12.9",
     "eas-cli": "^0.42",
     "expo-cli": "^5.0",
-    "npm-license-crawler": "^0.2",
+    "license-checker": "^25",
     "standard-version": "^9.3",
     "standard-version-expo": "^1.0"
   }
