--- a/package.json
+++ b/package.json
@@ -35,11 +35,12 @@
     "@react-native-async-storage/async-storage": "~1.15.0",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-community/slider": "4.1.12",
+    "@react-native-picker/picker": "2.2.1",
     "@react-navigation/drawer": "^6.1",
     "@react-navigation/native": "^6.0",
     "expo": "44",
     "expo-av": "~10.2.0",
-    "expo-constants": "~13.0.0",
+    "expo-constants": "~13.0.1",
     "expo-status-bar": "~1.2.0",
     "expo-web-browser": "~10.1.0",
     "lodash": "^4.17",
