--- a/app.json
+++ b/app.json
@@ -5,7 +5,7 @@
     "version": "0.10.1",
     "description": "",
     "githubUrl": "https://github.com/kinefi/subadapp",
-    "owner": "kinefi",
+    "owner": "subadap-cocuk",
     "privacy": "public",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
