--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "expo-av": "~10.2.0",
     "expo-constants": "~13.0.1",
     "expo-status-bar": "~1.2.0",
+    "expo-updates": "~0.11.6",
     "expo-web-browser": "~10.1.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
