Update expo to v45.beta

--- a/app.json
+++ b/app.json
@@ -4,7 +4,7 @@
     "slug": "subadapp",
     "version": "0.10.1",
     "description": "",
-    "githubUrl": "https://github.com/kinefi/subadapp",
+    "githubUrl": "https://github.com/subadapcocuk/subadapp",
     "owner": "subadap-cocuk",
     "privacy": "public",
     "orientation": "portrait",
