--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "version": "0.10.1",
   "repository": {
     "type": "git",
-    "url": "https://github.com/kinefi/subadapp.git"
+    "url": "https://github.com/subadapcocuk/subadapp.git"
   },
   "bugs": {
-    "url": "https://github.com/kinefi/subadapp/issues",
+    "url": "https://github.com/subadapcocuk/subadapp/issues",
     "email": "subadapcocuk+subadapp@gmail.com"
   },
   "funding": {
@@ -34,35 +34,35 @@
     "@fortawesome/react-native-fontawesome": "^0.2",
     "@react-native-async-storage/async-storage": "~1.15.0",
     "@react-native-community/masked-view": "^0.1.11",
-    "@react-native-community/slider": "4.1.12",
-    "@react-native-picker/picker": "2.2.1",
-    "@react-navigation/drawer": "^6.0",
+    "@react-native-community/slider": "4.2.1",
+    "@react-native-picker/picker": "2.4.0",
+    "@react-navigation/drawer": "^6.4",
     "@react-navigation/native": "^6.0",
-    "expo": "44",
-    "expo-av": "~10.2.0",
-    "expo-constants": "~13.0.1",
-    "expo-status-bar": "~1.2.0",
-    "expo-updates": "~0.11.6",
-    "expo-web-browser": "~10.1.0",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
-    "react-native": "0.64.3",
-    "react-native-dialog": "^9.0",
-    "react-native-elements": "^3.0",
-    "react-native-gesture-handler": "~2.1.0",
+    "expo": "45.0.0-beta.9",
+    "expo-av": "~11.2.2",
+    "expo-constants": "~13.1.0",
+    "expo-status-bar": "~1.3.0",
+    "expo-updates": "~0.13.0",
+    "expo-web-browser": "~10.2.0",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "react-native": "0.68.1",
+    "react-native-dialog": "^9.2",
+    "react-native-elements": "^3.4",
+    "react-native-gesture-handler": "~2.2.0",
     "react-native-get-random-values": "~1.7.0",
-    "react-native-reanimated": "~2.3.1",
-    "react-native-root-toast": "^3.0",
-    "react-native-safe-area-context": "3.3.2",
-    "react-native-screens": "~3.10.1",
-    "react-native-svg": "12.1.1",
+    "react-native-reanimated": "~2.8.0",
+    "react-native-root-toast": "^3.3",
+    "react-native-safe-area-context": "4.2.4",
+    "react-native-screens": "~3.11.1",
+    "react-native-svg": "12.3.0",
     "react-native-web": "0.17.1",
-    "react-native-webview": "11.15.0"
+    "react-native-webview": "11.18.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9",
-    "eas-cli": "^0.47",
-    "expo-cli": "^5.3",
+    "@babel/core": "^7.17.0",
+    "eas-cli": "^0.51",
+    "expo-cli": "^5.4",
     "license-checker": "^25.0",
     "standard-version": "^9.3",
     "standard-version-expo": "^1.0"
