--- a/package.json
+++ b/package.json
@@ -32,36 +32,36 @@
     "@fortawesome/free-regular-svg-icons": "^6.0",
     "@fortawesome/free-solid-svg-icons": "^6.0",
     "@fortawesome/react-native-fontawesome": "^0.2",
-    "@react-native-async-storage/async-storage": "~1.15.0",
+    "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-community/slider": "4.2.1",
     "@react-native-picker/picker": "2.4.0",
     "@react-navigation/drawer": "^6.4",
     "@react-navigation/native": "^6.0",
-    "expo": "45.0.0-beta.9",
-    "expo-av": "~11.2.2",
-    "expo-constants": "~13.1.0",
+    "expo": "45",
+    "expo-av": "~11.2.3",
+    "expo-constants": "~13.1.1",
     "expo-status-bar": "~1.3.0",
-    "expo-updates": "~0.13.0",
+    "expo-updates": "~0.13.1",
     "expo-web-browser": "~10.2.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-native": "0.68.1",
+    "react-native": "0.68.2",
     "react-native-dialog": "^9.2",
     "react-native-elements": "^3.4",
-    "react-native-gesture-handler": "~2.2.0",
-    "react-native-get-random-values": "~1.7.0",
+    "react-native-gesture-handler": "~2.2.1",
+    "react-native-get-random-values": "~1.8.0",
     "react-native-reanimated": "~2.8.0",
     "react-native-root-toast": "^3.3",
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
     "react-native-svg": "12.3.0",
-    "react-native-web": "0.17.1",
+    "react-native-web": "0.17.7",
     "react-native-webview": "11.18.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.17.0",
-    "eas-cli": "^0.51",
+    "@babel/core": "^7.12.9",
+    "eas-cli": "^0.52",
     "expo-cli": "^5.4",
     "license-checker": "^25.0",
     "standard-version": "^9.3",
