--- a/package.json
+++ b/package.json
@@ -38,11 +38,11 @@
     "@react-native-picker/picker": "2.4.0",
     "@react-navigation/drawer": "^6.4",
     "@react-navigation/native": "^6.0",
-    "expo": "45",
+    "expo": "46.0.0-beta.6",
     "expo-av": "~11.2.3",
     "expo-constants": "~13.1.1",
     "expo-status-bar": "~1.3.0",
-    "expo-updates": "~0.13.2",
+    "expo-updates": "~0.13.3",
     "expo-web-browser": "~10.2.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
@@ -61,8 +61,8 @@
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
-    "eas-cli": "^0.54",
-    "expo-cli": "^5.4",
+    "eas-cli": "^0.55",
+    "expo-cli": "^5.5",
     "license-checker": "^25.0",
     "standard-version": "^9.5",
     "standard-version-expo": "^1.0"
