--- a/package.json
+++ b/package.json
@@ -34,35 +34,35 @@
     "@fortawesome/react-native-fontawesome": "^0.3",
     "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-native-community/masked-view": "^0.1.11",
-    "@react-native-community/slider": "4.2.1",
-    "@react-native-picker/picker": "2.4.0",
+    "@react-native-community/slider": "4.2.3",
+    "@react-native-picker/picker": "2.4.2",
     "@react-navigation/drawer": "^6.4",
     "@react-navigation/native": "^6.0",
-    "expo": "46.0.0-beta.6",
-    "expo-av": "~11.2.3",
-    "expo-constants": "~13.1.1",
-    "expo-status-bar": "~1.3.0",
-    "expo-updates": "~0.13.3",
-    "expo-web-browser": "~10.2.1",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-native": "0.68.2",
+    "expo": "46",
+    "expo-av": "~12.0.3",
+    "expo-constants": "~13.2.3",
+    "expo-status-bar": "~1.4.0",
+    "expo-updates": "~0.14.3",
+    "expo-web-browser": "~11.0.0",
+    "react": "18.0.0",
+    "react-dom": "18.0.0",
+    "react-native": "0.69.3",
     "react-native-dialog": "^9.2",
     "react-native-elements": "^3.4",
-    "react-native-gesture-handler": "~2.2.1",
+    "react-native-gesture-handler": "~2.5.0",
     "react-native-get-random-values": "~1.8.0",
-    "react-native-reanimated": "~2.8.0",
+    "react-native-reanimated": "~2.9.1",
     "react-native-root-toast": "^3.4",
-    "react-native-safe-area-context": "4.2.4",
-    "react-native-screens": "~3.11.1",
+    "react-native-safe-area-context": "4.3.1",
+    "react-native-screens": "~3.15.0",
     "react-native-svg": "12.3.0",
-    "react-native-web": "0.17.7",
-    "react-native-webview": "11.18.1"
+    "react-native-web": "~0.18.7",
+    "react-native-webview": "11.23.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9",
-    "eas-cli": "^0.55",
-    "expo-cli": "^5.5",
+    "@babel/core": "^7.18.6",
+    "eas-cli": "^0.57",
+    "expo-cli": "^6.0",
     "license-checker": "^25.0",
     "standard-version": "^9.5",
     "standard-version-expo": "^1.0"
