--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,8 +1,8 @@
 name: Expo
+
 on:
-  push:
-    branches:
-      - main
+  workflow_dispatch:
+
 # https://github.com/expo/expo-github-action#publish-on-any-push-to-main
 jobs:
   build-android:
@@ -31,6 +31,7 @@ jobs:
         with:
           files: subadapmuzik-${{ steps.currenttag.outputs.tag }}.apk
           tag_name: ${{ steps.currenttag.outputs.tag }}
+
   publish:
     name: Publish
     runs-on: ubuntu-latest
