Fix bugs and update packages

--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "ŞUBADAPP",
+    "name": "ŞubadApp",
     "slug": "subadapp",
     "version": "0.10.2",
     "description": "",
