--- a/eas.json
+++ b/eas.json
@@ -9,7 +9,7 @@
     },
     "production": {
       "android": {
-        "buildType": "apk"
+        "buildType": "app-bundle"
       }
     }
   },
