--- a/package.json
+++ b/package.json
@@ -22,27 +22,28 @@
     "build:android": "eas build --platform android --non-interactive",
     "build:ios": "eas build --platform ios --non-interactive",
     "build:all": "eas build --platform all --non-interactive",
+    "submit:android": "eas submit --platform android",
+    "submit:ios": "eas submit --platform ios",
     "license:check": "yarn license-checker --production --json --out ./assets/licenses.json",
     "release": "standard-version --release-as ",
     "eject": "expo eject"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^6.1",
-    "@fortawesome/free-brands-svg-icons": "^6.1",
-    "@fortawesome/free-regular-svg-icons": "^6.1",
-    "@fortawesome/free-solid-svg-icons": "^6.1",
+    "@fortawesome/fontawesome-svg-core": "^6.2",
+    "@fortawesome/free-brands-svg-icons": "^6.2",
+    "@fortawesome/free-regular-svg-icons": "^6.2",
+    "@fortawesome/free-solid-svg-icons": "^6.2",
     "@fortawesome/react-native-fontawesome": "^0.3",
     "@react-native-async-storage/async-storage": "~1.17.3",
-    "@react-native-community/masked-view": "^0.1.11",
     "@react-native-community/slider": "4.2.3",
     "@react-native-picker/picker": "2.4.2",
-    "@react-navigation/drawer": "^6.4",
+    "@react-navigation/drawer": "^6.5",
     "@react-navigation/native": "^6.0",
     "expo": "46",
     "expo-av": "~12.0.4",
     "expo-constants": "~13.2.4",
     "expo-status-bar": "~1.4.0",
-    "expo-updates": "~0.14.5",
+    "expo-updates": "~0.14.6",
     "expo-web-browser": "~11.0.0",
     "react": "18.0.0",
     "react-dom": "18.0.0",
@@ -61,7 +62,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.18.6",
-    "eas-cli": "^0.60",
+    "eas-cli": "^2.1",
     "expo-cli": "^6.0",
     "license-checker": "^25.0",
     "standard-version": "^9.5",
