--- a/package.json
+++ b/package.json
@@ -36,29 +36,29 @@
     "@fortawesome/react-native-fontawesome": "^0.3",
     "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-native-community/slider": "4.2.3",
-    "@react-native-picker/picker": "2.4.2",
+    "@react-native-picker/picker": "2.4.6",
     "@react-navigation/drawer": "^6.5",
     "@react-navigation/native": "^6.0",
-    "expo": "46",
-    "expo-av": "~12.0.4",
-    "expo-constants": "~13.2.4",
+    "expo": "47.0.0-alpha.1",
+    "expo-av": "~13.0.0-beta.1",
+    "expo-constants": "~14.0.0",
     "expo-status-bar": "~1.4.0",
     "expo-updates": "~0.14.6",
     "expo-web-browser": "~11.0.0",
-    "react": "18.0.0",
+    "react": "18.1.0",
     "react-dom": "18.0.0",
-    "react-native": "0.69.6",
+    "react-native": "0.70.2",
     "react-native-dialog": "^9.2",
     "react-native-elements": "^3.4",
-    "react-native-gesture-handler": "~2.5.0",
+    "react-native-gesture-handler": "~2.7.0",
     "react-native-get-random-values": "~1.8.0",
-    "react-native-reanimated": "~2.9.1",
+    "react-native-reanimated": "~2.10.0",
     "react-native-root-toast": "^3.4",
     "react-native-safe-area-context": "4.3.1",
-    "react-native-screens": "~3.15.0",
+    "react-native-screens": "~3.18.0",
     "react-native-svg": "12.3.0",
     "react-native-web": "~0.18.7",
-    "react-native-webview": "11.23.0"
+    "react-native-webview": "11.23.1"
   },
   "devDependencies": {
     "@babel/core": "^7.18.6",
