--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "@react-native-picker/picker": "2.4.2",
     "@react-navigation/drawer": "^6.5",
     "@react-navigation/native": "^6.0",
-    "expo": "46",
+    "expo": "^46.0.0",
     "expo-av": "~12.0.4",
     "expo-constants": "~13.2.4",
     "expo-status-bar": "~1.4.0",
@@ -47,7 +47,7 @@
     "expo-web-browser": "~11.0.0",
     "react": "18.0.0",
     "react-dom": "18.0.0",
-    "react-native": "0.69.6",
+    "react-native": "0.69.5",
     "react-native-dialog": "^9.2",
     "react-native-elements": "^3.4",
     "react-native-gesture-handler": "~2.5.0",
@@ -62,7 +62,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.18.6",
-    "eas-cli": "^2.4",
+    "eas-cli": "^2.5",
     "license-checker": "^25.0",
     "standard-version": "^9.5",
     "standard-version-expo": "^1.0"
