--- a/package.json
+++ b/package.json
@@ -39,11 +39,11 @@
     "@react-native-picker/picker": "2.4.8",
     "@react-navigation/drawer": "^6.5",
     "@react-navigation/native": "^6.0",
-    "expo": "^47.0.0-beta.7",
+    "expo": "^47.0.1",
     "expo-av": "~13.0.1",
     "expo-constants": "~14.0.2",
-    "expo-status-bar": "~1.4.1",
-    "expo-updates": "~0.15.3",
+    "expo-status-bar": "~1.4.2",
+    "expo-updates": "~0.15.4",
     "expo-web-browser": "~12.0.0",
     "react": "18.1.0",
     "react-dom": "18.1.0",
@@ -52,7 +52,7 @@
     "react-native-elements": "^3.4",
     "react-native-gesture-handler": "~2.8.0",
     "react-native-get-random-values": "~1.8.0",
-    "react-native-reanimated": "~2.11.0",
+    "react-native-reanimated": "~2.12.0",
     "react-native-root-toast": "^3.4",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
@@ -61,7 +61,7 @@
     "react-native-webview": "11.23.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.18.6",
+    "@babel/core": "^7.19.3",
     "eas-cli": "^2.6",
     "license-checker": "^25.0",
     "standard-version": "^9.5",
