--- a/app.json
+++ b/app.json
@@ -2,7 +2,7 @@
   "expo": {
     "name": "ŞubadApp",
     "slug": "subadapp",
-    "version": "0.14.0",
+    "version": "0.14.1",
     "description": "",
     "githubUrl": "https://github.com/subadapcocuk/subadapp",
     "owner": "subadap-cocuk",
@@ -22,7 +22,7 @@
     ],
     "ios": {
       "supportsTablet": true,
-      "buildNumber": "0.14.0",
+      "buildNumber": "0.14.1",
       "bundleIdentifier": "subadapp"
     },
     "android": {
@@ -30,9 +30,11 @@
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#FFFFFF"
       },
-      "blockedPermissions": ["android.permission.RECORD_AUDIO"],
+      "blockedPermissions": [
+        "android.permission.RECORD_AUDIO"
+      ],
       "package": "org.subadapp",
-      "versionCode": 470001400
+      "versionCode": 470001401
     },
     "web": {
       "favicon": "./assets/favicon.png"
