--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "build:all": "eas build --platform all --non-interactive",
     "submit:android": "eas submit --platform android",
     "submit:ios": "eas submit --platform ios",
-    "license:check": "yarn license-checker-rseidelsohn --production --json --out ./assets/licenses.json",
+    "license": "license-report --only=prod --output=table",
     "release": "commit-and-tag-version --release-as ",
     "eject": "expo eject"
   },
@@ -62,8 +62,8 @@
   "devDependencies": {
     "@babel/core": "^7.19.3",
     "commit-and-tag-version": "^10.1",
-    "eas-cli": "^3.0",
-    "license-checker-rseidelsohn": "^3.1",
+    "eas-cli": "^3.1",
+    "license-report": "^6.3",
     "standard-version-expo": "^1.0"
   }
 }
