--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Local Build and Release
+name: "Release"
 
 on:
   workflow_dispatch:
@@ -6,7 +6,7 @@ on:
 # https://github.com/expo/expo-github-action#publish-on-any-push-to-main
 jobs:
   build-android:
-    name: Build Android Locally
+    name: Build Android and Release
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
