--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "expo": "^47",
     "expo-av": "~13.0.2",
     "expo-constants": "~14.0.2",
+    "expo-linking": "^3.3.0",
     "expo-status-bar": "~1.4.2",
     "expo-updates": "~0.15.6",
     "react": "18.1.0",
