--- a/app.json
+++ b/app.json
@@ -27,6 +27,7 @@
       "bundleIdentifier": "subadapp"
     },
     "android": {
+      "googleServicesFile": "./google-services.json",
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#FFFFFF"
