--- a/package.json
+++ b/package.json
@@ -42,7 +42,9 @@
     "expo": "^47",
     "expo-av": "~13.0.2",
     "expo-constants": "~14.0.2",
+    "expo-device": "~5.0.0",
     "expo-linking": "~3.3.0",
+    "expo-notifications": "~0.17.0",
     "expo-status-bar": "~1.4.2",
     "expo-updates": "~0.15.6",
     "react": "18.1.0",
@@ -51,7 +53,7 @@
     "react-native-dialog": "^9.3",
     "react-native-elements": "^3.4",
     "react-native-gesture-handler": "~2.8.0",
-    "react-native-get-random-values": "~1.8.0",
+    "react-native-get-random-values": "^1.8",
     "react-native-reanimated": "~2.12.0",
     "react-native-root-toast": "^3.4",
     "react-native-safe-area-context": "4.4.1",
