--- a/app.json
+++ b/app.json
@@ -6,7 +6,7 @@
     "description": "",
     "scheme": "subadapp",
     "githubUrl": "https://github.com/subadapcocuk/subadapp",
-    "owner": "subadap-cocuk",
+    "owner": "kolektif",
     "privacy": "public",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
@@ -18,9 +18,7 @@
     "updates": {
       "fallbackToCacheTimeout": 0
     },
-    "assetBundlePatterns": [
-      "**/*"
-    ],
+    "assetBundlePatterns": ["**/*"],
     "ios": {
       "supportsTablet": true,
       "buildNumber": "0.16.1",
@@ -32,9 +30,7 @@
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#FFFFFF"
       },
-      "blockedPermissions": [
-        "android.permission.RECORD_AUDIO"
-      ],
+      "blockedPermissions": ["android.permission.RECORD_AUDIO"],
       "package": "org.subadapp",
       "versionCode": 470001601
     },
