--- a/package.json
+++ b/package.json
@@ -29,15 +29,14 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^6.2",
-    "@fortawesome/free-brands-svg-icons": "^6.2",
-    "@fortawesome/free-regular-svg-icons": "^6.2",
-    "@fortawesome/free-solid-svg-icons": "^6.2",
+    "@fortawesome/fontawesome-svg-core": "^6.3",
+    "@fortawesome/free-brands-svg-icons": "^6.3",
+    "@fortawesome/free-solid-svg-icons": "^6.3",
     "@fortawesome/react-native-fontawesome": "^0.3",
     "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-native-community/slider": "4.4.2",
     "@react-native-picker/picker": "2.4.8",
-    "@react-navigation/drawer": "^6.5",
+    "@react-navigation/drawer": "^6.6",
     "@react-navigation/native": "^6.1",
     "expo": "^48",
     "expo-av": "~13.2.1",
@@ -46,7 +45,6 @@
     "expo-linking": "~4.0.1",
     "expo-notifications": "~0.18.0",
     "expo-status-bar": "~1.4.4",
-    "expo-updates": "~0.16.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.71.3",
@@ -63,10 +61,10 @@
     "react-native-webview": "11.26.0"
   },
   "devDependencies": {
+    "@apercky/standard-version-expo": "^1.0",
     "@babel/core": "^7.19.3",
     "commit-and-tag-version": "^11.0",
-    "eas-cli": "^3.5",
-    "license-report": "^6.3",
-    "standard-version-expo": "^1.0"
+    "eas-cli": "^3.7",
+    "license-report": "^6.3"
   }
 }
