--- a/eas.json
+++ b/eas.json
@@ -20,6 +20,10 @@
     }
   },
   "submit": {
-    "production": {}
+    "production": {
+      "ios": {
+        "ascAppId": "1669825799"
+      }
+    }
   }
 }
