--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -1,4 +1,4 @@
-name: "Build iOS"
+name: "iOS"
 
 on:
   workflow_dispatch:
@@ -21,5 +21,5 @@ jobs:
           token: ${{ secrets.EXPO_TOKEN }}
       - name: Install dependencies
         run: yarn install
-      - name: Build packages
+      - name: Build package
         run: yarn build:ios
