--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -14,11 +14,11 @@ jobs:
           fetch-depth: 0
       - uses: actions/setup-node@v3
         with:
-          node-version: 18.x
-          cache: "yarn"
-      - uses: expo/expo-github-action@v7
+          node-version: 20.x
+          cache: yarn
+      - uses: expo/expo-github-action@v8
         with:
-          expo-version: latest
+          eas-version: latest
           token: ${{ secrets.EXPO_TOKEN }}
       - name: Install dependencies
         run: yarn install
