--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-svg": "15.2.0",
+    "react-native-track-player": "^4.1",
     "react-native-web": "~0.19.6",
     "react-native-webview": "13.8.6"
   },
