--- a/package.json
+++ b/package.json
@@ -34,37 +34,36 @@
     "@fortawesome/free-solid-svg-icons": "^6.5",
     "@fortawesome/react-native-fontawesome": "^0.3",
     "@react-native-async-storage/async-storage": "1.23.1",
-    "@react-native-community/slider": "4.5.2",
-    "@react-native-picker/picker": "2.7.5",
-    "@react-navigation/drawer": "^6.6",
-    "@react-navigation/native": "^6.1",
-    "expo": "^51",
-    "expo-av": "~14.0.5",
-    "expo-constants": "~16.0.2",
-    "expo-device": "~6.0.2",
-    "expo-linking": "~6.3.1",
-    "expo-notifications": "~0.28.5",
-    "expo-status-bar": "~1.12.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-native": "0.74.5",
+    "@react-native-community/slider": "4.5.5",
+    "@react-native-picker/picker": "2.9.0",
+    "@react-navigation/drawer": "^7.0",
+    "@react-navigation/native": "^7.0",
+    "expo": "^52",
+    "expo-av": "~15.0.1",
+    "expo-constants": "~17.0.3",
+    "expo-device": "~7.0.1",
+    "expo-linking": "~7.0.2",
+    "expo-notifications": "~0.29.8",
+    "expo-status-bar": "~2.0.0",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "react-native": "0.76.2",
     "react-native-dialog": "^9.3",
     "react-native-elements": "^3.4",
-    "react-native-gesture-handler": "~2.16.1",
+    "react-native-gesture-handler": "~2.20.2",
     "react-native-get-random-values": "~1.11.0",
-    "react-native-reanimated": "~3.10.1",
+    "react-native-reanimated": "~3.16.1",
     "react-native-root-toast": "^3.6",
-    "react-native-safe-area-context": "4.10.5",
-    "react-native-screens": "3.31.1",
-    "react-native-svg": "15.2.0",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.1.0",
+    "react-native-svg": "15.8.0",
     "react-native-web": "~0.19.6",
-    "react-native-webview": "13.8.6"
+    "react-native-webview": "13.12.4"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "@expo/metro-runtime": "~3.2.1",
+    "@expo/metro-runtime": "~4.0.0",
     "@mccraveiro/standard-version-expo": "^2.0",
     "commit-and-tag-version": "^12.0",
-    "eas-cli": "^12.0"
+    "eas-cli": "^13.0"
   }
 }
