Update to use pnpm

--- a/app.json
+++ b/app.json
@@ -9,6 +9,7 @@
     "owner": "kolektif",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
+    "newArchEnabled": true,
     "splash": {
       "image": "./assets/splash.png",
       "resizeMode": "contain",
