--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "url": "https://www.kreosus.com/subadapcocuk"
   },
   "scripts": {
+    "preinstall": "npx only-allow pnpm",
     "start": "expo start",
     "fix": "expo install --fix",
     "android": "expo start --android",
@@ -30,41 +31,41 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^6.5",
-    "@fortawesome/free-brands-svg-icons": "^6.5",
-    "@fortawesome/free-solid-svg-icons": "^6.5",
-    "@fortawesome/react-native-fontawesome": "^0.3",
+    "@fortawesome/fontawesome-svg-core": "^6.7.2",
+    "@fortawesome/free-brands-svg-icons": "^6.7.2",
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
+    "@fortawesome/react-native-fontawesome": "^0.3.2",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-community/slider": "4.5.5",
     "@react-native-picker/picker": "2.9.0",
-    "@react-navigation/bottom-tabs": "^7.1.3",
-    "@react-navigation/drawer": "^7.0",
-    "@react-navigation/native": "^7.0",
-    "expo": "~52.0.11",
-    "expo-av": "~15.0.1",
-    "expo-constants": "~17.0.3",
-    "expo-device": "~7.0.1",
-    "expo-linking": "~7.0.2",
-    "expo-notifications": "~0.29.9",
-    "expo-status-bar": "~2.0.0",
+    "@react-navigation/bottom-tabs": "^7.2.0",
+    "@react-navigation/drawer": "^7.1.1",
+    "@react-navigation/native": "^7.0.14",
+    "expo": "~52.0.25",
+    "expo-av": "~15.0.2",
+    "expo-constants": "~17.0.4",
+    "expo-device": "~7.0.2",
+    "expo-linking": "~7.0.4",
+    "expo-notifications": "~0.29.12",
+    "expo-status-bar": "~2.0.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-native": "0.76.3",
-    "react-native-dialog": "^9.3",
+    "react-native": "0.76.6",
+    "react-native-dialog": "^9.3.0",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-get-random-values": "~1.11.0",
     "react-native-pager-view": "6.5.1",
-    "react-native-reanimated": "~3.16.1",
-    "react-native-root-toast": "^3.6",
+    "react-native-reanimated": "~3.16.7",
     "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.1.0",
+    "react-native-screens": "~4.4.0",
     "react-native-svg": "15.8.0",
-    "react-native-web": "~0.19.6",
-    "react-native-webview": "13.12.2"
+    "react-native-toast-message": "^2.2.1",
+    "react-native-web": "~0.19.13",
+    "react-native-webview": "13.12.5"
   },
   "devDependencies": {
     "@expo/metro-runtime": "~4.0.0",
-    "@mccraveiro/standard-version-expo": "^2.0",
-    "commit-and-tag-version": "^12.0"
+    "@mccraveiro/standard-version-expo": "^2.0.5",
+    "commit-and-tag-version": "^12.5.0"
   }
 }
