--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -13,13 +13,13 @@ jobs:
           fetch-depth: 0
       - uses: actions/setup-node@v4
         with:
-          node-version: 20
-          cache: 'yarn'
+          node-version: 22
+          cache: 'pnpm'
       - uses: expo/expo-github-action@v8
         with:
           eas-version: latest
           token: ${{ secrets.EXPO_TOKEN }}
       - name: Install dependencies
-        run: yarn install
+        run: pnpm install
       - name: Build package
-        run: yarn build:ios
+        run: pnpm build:ios
