--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "main": "node_modules/expo/AppEntry.js",
   "license": "Apache-2.0",
-  "version": "0.26.1",
+  "version": "0.26.2",
   "repository": {
     "type": "git",
     "url": "https://github.com/subadapcocuk/subadapp.git"
@@ -65,7 +65,7 @@
   },
   "devDependencies": {
     "@expo/metro-runtime": "~4.0.1",
-    "commit-and-tag-version": "^12.5.0",
-    "standard-version-expo": "github:krisgerhard/standard-version-expo"
+    "@mccraveiro/standard-version-expo": "^2.0.5",
+    "commit-and-tag-version": "^12.5.0"
   }
 }
